--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
-  "name": "package",
+  "name": "fruits",
   "version": "1.0.0",
-  "description": "",
+  "engines": {
+    "node": "16.13.2"
+  },
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-react-views": "^0.11.0",
+    "method-override": "^3.0.0",
     "mongoose": "^6.2.4",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
-  }
+  },
+  "description": ""
 }
